# pokerstove

src/: CMakeLists.txt  all_board.py  all_hands.py
src/programs/ps-eval/: CMakeLists.txt  my.cpp
src/tmp/002/: source
src/tmp/a001/: source
src/tmp/a002/: source
src/tmp/a003/: source
